<resources>
    <string name="app_name">MxFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="GPS_name">GPS settings</string>
    <string name="GPS_warning">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="Pushups_title">Exit?</string>
    <string name="Pushups_warning">You haven\'t completed your training yet. Are you sure you want to quit?</string>
    <string name="Permissions_title">GPS Permissions Warning</string>
    <string name="Permissions_warning">You have to enable GPS Permissions, to access this function</string>
    <string name="EndTraining_warning">Are you sure, you want to end your training right now?</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Home Screen</string>
    <string-array name="pref_example_list_titles">
        <item>Trainings</item>
        <item>Running</item>
        <item>Pushups</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_theme">Theme Styling</string>
    <string-array name="pref_themes_titles">
        <item>Light</item>
        <item>Darkly</item>
        <item>Deus Age</item>
        <item>Minimalistic</item>
    </string-array>
    <string-array name="pref_themes_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pref_title_sync_frequency">Localization Refresh Rate</string>
    <string-array name="pref_sync_frequency_titles">
        <item>High Accuracy</item>
        <item>Balanced Accuracy/Power</item>
        <item>Battery Saving</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>5</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_customization">Customization</string>

    <string name="pref_theme_color">Change Theme Color</string>
    <string name="pref_notifications_enable">Enable Notifications</string>

    <string name="pref_main_bar_color">Main Bar Color</string>
    <string name="pref_background_color">Background Color</string>
    <string name="pref_gradient_color">Bottom Gradient Color</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="welcome_back">Welcome Back</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">Please enter new password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter e-mail for which the reset password link will be sent.</string>
    <string name="email_id">Email ID</string>
    <string name="DeleteAcc_Message">Do you really want to delete the account?</string>
    <string name="DeleteAcc_Title">Delete account?</string>
</resources>
