<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.mxfit.mentix.menu3.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.mxfit.mentix.menu3.SettingsActivity$NotificationsPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.mxfit.mentix.menu3.SettingsActivity$CustomizationPreferenceFragment"
        android:icon="@drawable/ic_customize"
        android:title="@string/pref_header_customization" />



</preference-headers>
