<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <PreferenceCategory android:title="Theme">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_themes_titles"
            android:entryValues="@array/pref_themes_values"
            android:key="theme_number"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_theme" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_theme_color"
            android:title="@string/pref_theme_color" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->


        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_bar_color"
            android:title="Change bar color"
            android:dependency="pref_theme_color"/>

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color1"
            android:title="@string/pref_main_bar_color"
            android:dependency="switch_bar_color"
            android:defaultValue="?attr/colorPrimary"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_background_color"
            android:dependency="pref_theme_color"
            android:title="Change background color" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color2"
            android:title="@string/pref_background_color"
            android:dependency="switch_background_color"
            android:defaultValue="@android:color/white"
            />

        <SwitchPreference
            android:defaultValue="false"
            android:key="switch_gradient_color"
            android:dependency="switch_background_color"
            android:title="Use Gradient as a background" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="color3"
            android:title="@string/pref_gradient_color"
            android:dependency="switch_gradient_color"
            android:defaultValue="@android:color/white"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Running line options">
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_running_color"
        android:title="Custom Running Line" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="colorR1"
        android:title="Main Color"
        android:dependency="switch_running_color"
        android:defaultValue="?attr/colorPrimary"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_multi_color"
        android:dependency="switch_running_color"
        android:title="Cycle Between Two Colors" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="colorR2"
        android:title="Secondary color"
        android:dependency="switch_multi_color"
        android:defaultValue="@android:color/white" />

        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:key="slider_smoothness"
            android:title="Color Step"
            android:summary="How smooth the color transition will be"
            android:defaultValue="20"

            sample:msbp_minValue="5"
            sample:msbp_maxValue="170"
            sample:msbp_interval="1"
            sample:msbp_dialogEnabled="false"/>
    </PreferenceCategory>


</PreferenceScreen>
